Fix switch with multiple yields